Version 6.0.0
- Added support for bool, false, and true to C++
- Added some missing defines in stdint.h
- Added automatic I/O locking for PRINT, __builtin_printf, and DEBUG
- Added ability to have multiple items in BASIC CASE 
- Added "ASM_CONST" keyword to Spin
- Changed "ASM CONST" to "CONST ASM" in BASIC
- Fixed multiple assignments in Spin (a:=b:=c) to have the same semantics as Spin
- Improved --interp=rom (Spin1 bytecode output) to run more programs
- New optimization: -Oremove-features removes advanced file I/O
features if not needed by the program; this can save a lot of
space. Enabled by default in -O1.

Version 5.5.2
- Added cpustop for BASIC
- Allow relative branches between COG and LUT RAM
- Cleaned up exec() and CHAIN to clear RAM before starting the new program
- Fixed a bug which could cause duplicate struct definitions in C
- Fixed an optimizer bug where reads/writes could be incorrectly re-ordered
- Fixed an error parsing += in BASIC array operations
- Fixed a bug in *s parsing in sscanf()

Version 5.5.1
- Added a warning for ignored second parameter to `org`
- Added -Os option; similar to -O1, but favors smaller size.
- Added #warning directive to C preprocessor
- Fixed Spin startup function (should be first PUB function, not first function)
- Fixed evaluation of @ inside CONSTANT
- Fixed assembly of PTRA++[0] and PTRA++[16]
- Fixed some spurious warnings about uninitialized variables
- Fixed an optimization error for BYTE[] and WORD[]
- Fixed incorrect unary assignment operator behavior in Spin
- Fixed ~x and ~~x at top level in Spin1
- Fixed SIGNX= and ZEROX= in Spin2
- Fixed compilation of MOUNT if there is no OPEN (not a useful case, but still)
- Improved COG memory usage
- Improved conversion of longmove() in Spin to handle labels
- Made objects come after all variables in Spin
- Merged colorized error message changes from Wuerfel21.
- Optimized PRINT CHR$(x) in BASIC